@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005 Vasco Nunes
 
+2005-10-14  Piotr Ozarowski <ozarow@gmail.com>
+	* [Bug #5344] fixed wrong encoding in IMDb movie plugin (thanks to dieterv)
+
 2005-10-13  Piotr Ozarowski <ozarow@gmail.com>
 	* Updated WP movie plugin (webpage was changed)
 	* Debian menu icon was in wrong format
